# mathlib

./: CMakeLists.txt  README.md
include/: matrix.hpp  matrixAlgorithms.hpp  matrixMath.hpp  quaternion.hpp  quaternionAlgorithms.hpp  quaternionMath.hpp  vector.hpp  vectorAlgorithms.hpp  vectorMath.hpp
